[UPDATE] now connect with prod keys

--- a/assets/doc/data/.env
+++ b/assets/doc/data/.env
@@ -1,3 +1,2 @@
-DEV_SUB_KEY="sub-c-33ec031c-7f5e-11eb-ab8f-267aa1707a89"
-DEV_PUB_KEY="pub-c-a2c76696-16af-43e6-98ee-4b83f3d009e4"
-PSEUDO="paradox8449654133"
+SUB_KEY="sub-c-1f767206-7f58-11eb-9841-ba1748e8fc47"
+PUB_KEY="pub-c-3b150d6a-746f-43e1-9a48-017db3995271"
