[NICE] add some docstrings

--- a/assets/doc/data/.env
+++ b/assets/doc/data/.env
@@ -1,2 +1,3 @@
 SUB_KEY="sub-c-1f767206-7f58-11eb-9841-ba1748e8fc47"
 PUB_KEY="pub-c-3b150d6a-746f-43e1-9a48-017db3995271"
+PSEUDO="paradox9490521555"
